@@ -9,7 +9,7 @@
 listen = * [::]
 
 #base_dir = PH_BASE_DIR
-mail_plugins = quota acl mail_log notify
+mail_plugins = quota acl mail_log notify stats
 
 # Enabled mail protocols.
 protocols = PH_PROTOCOLS
@@ -241,6 +241,20 @@ plugin {
     # Defined in https://github.com/dovecot/core/blob/master/src/plugins/mail-log/mail-log-plugin.c
     mail_log_events = delete undelete expunge mailbox_delete mailbox_rename
     mail_log_fields = uid box msgid size from subject
+
+    # stats
+    #
+    # how often to session statistics (must be set)
+    stats_refresh = 30 secs
+    # track per-IMAP command statistics (optional)
+    stats_track_cmds = yes
+}
+
+service stats {
+    inet_listener {
+        address = 127.0.0.1
+        port = PH_DOVECOT_SERVICE_STATS_PORT
+    }
 }
 
 service quota-warning {
@@ -292,7 +306,7 @@ protocol lmtp {
 }
 
 protocol imap {
-    mail_plugins = $mail_plugins imap_quota autocreate imap_acl
+    mail_plugins = $mail_plugins imap_quota autocreate imap_acl imap_stats
     imap_client_workarounds = tb-extra-mailbox-sep
 
     # Maximum number of IMAP connections allowed for a user from each IP address.
